# agent-knowledge

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .env.local-preview.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260629_0001_initial.py  20260701_0002_document_chunk_vector_index.py  20260701_0003_add_user_admin_flag.py  20260701_0004_add_user_feedback.py  20260702_0005_add_revoked_tokens.py
apps/api/app/: main.py
apps/api/app/agents/: __init__.py  base.py  general.py  github.py  lifestyle.py  llm_summary.py  recommender.py  router.py
apps/api/app/api/: deps.py  router.py
apps/api/app/collectors/: base.py  github.py  rss.py  web.py
apps/api/app/core/: config.py  logging.py  security.py  url_security.py
apps/api/app/db/: base.py  init_db.py  session.py  types.py
apps/api/app/llm/: base.py  errors.py  mock.py  openai_compatible.py  providers.py
apps/api/app/models/: __init__.py  content.py  document.py  enums.py  feedback.py  job.py  logs.py  preference.py  recommendation.py  token.py  user.py
apps/api/app/repositories/: audit_logs.py  contents.py  documents.py  feedback.py  ingestions.py  preferences.py  push_logs.py  recommendations.py  tokens.py  users.py
apps/api/app/schemas/: agents.py  audit.py  auth.py  collector.py  content.py  discovery.py  document.py  feedback.py  ingestion.py  preferences.py  push.py  recommendation.py  search.py
apps/api/app/services/: audit.py  auth.py  chunking.py  content_builder.py  discovery.py  documents.py  (+9 more)
(+54 files in other folders)
