[project]
name = "personal-knowledge-radar-api"
version = "0.1.0"
description = "FastAPI backend for Personal Knowledge Radar"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "celery>=5.3.0",
  "email-validator>=2.1.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",
  "pgvector>=0.2.5",
  "psycopg[binary]>=3.1.18",
  "pydantic-settings>=2.2.1",
  "pydantic>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.25",
  "structlog>=24.1.0",
  "trafilatura>=1.8.0",
  "beautifulsoup4>=4.12.0",
  "readability-lxml>=0.8.1",
  "uvicorn[standard]>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
